[package]
name = "dataearth_backend"
version = "0.1.0"
authors = ["Phosphorus15 <steepout@qq.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.7"
actix-session = "0.2.0"
serde = "1.0.100"
serde_json = "1.0.40"
uuid = { version = "0.7", features = ["serde", "v4"] }
postgres = "0.15.2"
actix-web-static-files = "0.2.3"
binary-heap-plus = "0.2.0"
compare = "0.1.0"
json = "0.12.0"
sha2 = "0.8.0"
hex = "0.4.0"
rust_decimal = {version = "1.0.3", features = ["postgres"]}
actix-multipart = "0.1.4"
futures = "0.1.29"

[build-dependencies]
actix-web-static-files = "0.2.3"